[package]
name = "mqtt-fed"
description = "A federator for MQTT brokers."
version = "0.1.0"
license = "Apache-2.0"
authors = ["Nicolas K. Ribas <nicolaskribas@gmail.com>"]
repository = "https://github.com/nicolaskribas/mqtt-fed"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.0.0", features = ["derive"] }
config = "0.11.0"
lru = "0.7.2"
once_cell = "1.9.0"
paho-mqtt = "0.10.0"
serde = { version = "1.0.132", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
